<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/portDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:text="Port will display here"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/portTitle" />

    <TextView
        android:id="@+id/remainingPointsDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pntsremain"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/portTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Port: "
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botScanRngDisplay" />

    <TextView
        android:id="@+id/botShotPwrStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="12dp"
        android:text="1"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toEndOf="@+id/decArmor"
        app:layout_constraintTop_toTopOf="@+id/botShotPwrDisplay" />

    <TextView
        android:id="@+id/botScanRngStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="4dp"
        android:text="1"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toEndOf="@+id/decArmor"
        app:layout_constraintTop_toTopOf="@+id/botScanRngDisplay" />

    <Button
        android:id="@+id/incScanRng"
        android:layout_width="55dp"
        android:layout_height="49dp"
        android:layout_marginEnd="20dp"
        android:text="+"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/decScanRng" />

    <Button
        android:id="@+id/decScanRng"
        android:layout_width="55dp"
        android:layout_height="49dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="28dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/botArmorDisplay"
        app:layout_constraintTop_toBottomOf="@+id/decShotPwr" />

    <Button
        android:id="@+id/incShotPwr"
        android:layout_width="55dp"
        android:layout_height="49dp"
        android:layout_marginEnd="20dp"
        android:text="+"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/decShotPwr" />

    <Button
        android:id="@+id/decShotPwr"
        android:layout_width="55dp"
        android:layout_height="49dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="40dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/botArmorDisplay"
        app:layout_constraintTop_toBottomOf="@+id/decArmor" />

    <TextView
        android:id="@+id/botArmorStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="1"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toEndOf="@+id/decArmor"
        app:layout_constraintTop_toTopOf="@+id/botArmorDisplay" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/battlebots"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/set_up_your_battlebot"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/points_to_assign"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/botNameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Host Name: "
        android:textSize="25sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/botArmorDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/armor"
        android:textSize="25sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botNameDisplay" />

    <TextView
        android:id="@+id/botShotPwrDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/shot_power"

        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botArmorDisplay" />

    <TextView
        android:id="@+id/botScanRngDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/scan_range"

        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botShotPwrDisplay" />

    <Button
        android:id="@+id/rdyUpButton"
        android:layout_width="167dp"
        android:layout_height="61dp"
        android:layout_marginTop="88dp"
        android:text="@string/ready_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botScanRngDisplay" />

    <Button
        android:id="@+id/decArmor"
        android:layout_width="55dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/botArmorDisplay"
        app:layout_constraintTop_toBottomOf="@+id/botNameDisplay" />

    <Button
        android:id="@+id/incArmor"
        android:layout_width="55dp"
        android:layout_height="49dp"
        android:layout_marginEnd="76dp"
        android:text="+"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/decArmor" />

    <EditText
        android:id="@+id/editTextDisplayName"
        android:layout_width="179dp"
        android:layout_height="41dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="DisplayName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/botNameDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/botNameDisplay"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>